--- a/SmartShopMobileApp/Views/SignUpView.xaml
+++ b/SmartShopMobileApp/Views/SignUpView.xaml
@@ -2,17 +2,30 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SmartShopMobileApp.Views.SignUpView"
+             xmlns:validation="clr-namespace:SmartShopMobileApp.Helpers.Validations"
              xmlns:viewModels="clr-namespace:SmartShopMobileApp.ViewModels" 
              Title="Sign Up">
+
+
     <VerticalStackLayout>
         <ScrollView>
             <StackLayout Margin="20">
                 <Entry Placeholder="First Name" Text="{Binding FirstName}"/>
                 <Entry Placeholder="Last Name" Text="{Binding LastName}"/>
-                <Entry Placeholder="Email Address" Text="{Binding EmailAddress}"/>
-                <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password}"/>
-                <DatePicker x:Name="birthDateDatePicker"/>
-                <Button Text="Sign Up" Command="{Binding SignUpCommand}"/>
+                <Entry Placeholder="Email Address" Text="{Binding EmailAddress}" Margin="0,0,0,10">
+                    <Entry.Behaviors>
+                        <validation:EmailValidation />
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry Placeholder="Password" Text="{Binding Password}" IsPassword="True" Margin="0,0,0,10">
+                    <Entry.Behaviors>
+                        <validation:PasswordValidation />
+                    </Entry.Behaviors>
+                </Entry>
+                <DatePicker x:Name="birthDateDatePicker" Date="{Binding BirthDate}"/>
+                <Button Text="Sign Up" 
+                        Command="{Binding SignUpCommand}" 
+                        IsEnabled="True"/>
             </StackLayout>
         </ScrollView>
     </VerticalStackLayout>
