--- a/SmartShopMobileApp/Views/LogInView.xaml
+++ b/SmartShopMobileApp/Views/LogInView.xaml
@@ -2,11 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SmartShopMobileApp.Views.LogInView"
-             xmlns:viewModels="clr-namespace:SmartShopMobileApp.ViewModels" >
+             xmlns:viewModels="clr-namespace:SmartShopMobileApp.ViewModels"
+             Title="Log In">
     <VerticalStackLayout>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="5"/>
+                <RowDefinition Height="100"/>
                 <RowDefinition Height="280"/>
                 <RowDefinition Height="70"/>
                 <RowDefinition Height="70"/>
@@ -18,10 +19,19 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="25"/>
             </Grid.ColumnDefinitions>
+      
+            <Image Source="logo.png"
+                   Grid.Row="1" 
+                   Grid.Column="0"
+                   Grid.ColumnSpan="3" 
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center"
+                   WidthRequest="300" 
+                   HeightRequest="250"/>
             <Entry Grid.Row="2"
                Grid.Column="1"
                Text="{Binding Email}"
-               Placeholder="emailAddress"/>
+               Placeholder="Email Address"/>
             <Entry Grid.Row="3"
                Grid.Column="1"
                Text="{Binding Password}"
@@ -29,7 +39,7 @@
                IsPassword="True"/>
             <Button Grid.Row="4"
                 Grid.Column="1"
-                Text="Log in"
+                Text="Log In"
                 Command ="{Binding LogInCommand}"
                />
         </Grid>
