--- a/SmartShopMobileApp/AppShell.xaml
+++ b/SmartShopMobileApp/AppShell.xaml
@@ -22,17 +22,18 @@
     <TabBar Route="AppView">
         <ShellContent Title="{x:Static lang:AppResources.Home}"  
                       Icon="home.png"
+                      Route="HomeView"
                       ContentTemplate="{DataTemplate local:HomeView}" />
-        <ShellContent Title="Scan product"  
+        <ShellContent Title="{x:Static lang:AppResources.ScanProduct}"  
                       Icon="scanner.png"
                       ContentTemplate="{DataTemplate local:BarcodeScannerView}" />
-        <ShellContent Title="History"  
+        <ShellContent Title="{x:Static lang:AppResources.History}"  
                       Icon="transaction.png"
                       ContentTemplate="{DataTemplate local:HistoryAndStatisticsView}" />
-        <ShellContent Title="My cart"  
+        <ShellContent Title="{x:Static lang:AppResources.MyCart}"  
                       Icon="cart.png"
                       ContentTemplate="{DataTemplate local:ShoppingCartView}" />
-        <ShellContent Title="Profile"  
+        <ShellContent Title="{x:Static lang:AppResources.Profile}"  
                       Icon="profile.png"
                       ContentTemplate="{DataTemplate local:ProfileView}" />
     </TabBar>
